@@ -1,7 +1,7 @@
 dnl vim: ft=config sw=4 noet nocin com+=b\:dnl fo+=or tw=78
 dnl ==========================================================================
 dnl 
-dnl @(#) $RCSfile: testsuite-inet_tcp.at,v $ $Name:  $($Revision: 0.9.2.38 $) $Date: 2008-04-28 22:52:18 $
+dnl @(#) $RCSfile: testsuite-inet_tcp.at,v $ $Name:  $($Revision: 0.9.2.39 $) $Date: 2008-08-02 03:02:01 $
 dnl
 dnl --------------------------------------------------------------------------
 dnl
@@ -61,7 +61,7 @@ dnl Corporation at a fee.  See http://www.openss7.com/
 dnl
 dnl --------------------------------------------------------------------------
 dnl
-dnl Last Modified $Date: 2008-04-28 22:52:18 $ by $Author: brian $
+dnl Last Modified $Date: 2008-08-02 03:02:01 $ by $Author: brian $
 dnl
 dnl ==========================================================================
 
@@ -1894,11 +1894,13 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 4.1.6])
 AT_KEYWORDS([T_CONN_REQ])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 4.1.6], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 4.1.7])
 AT_KEYWORDS([T_CONN_REQ])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 4.1.7], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2239,21 +2241,25 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 5.1])
 AT_KEYWORDS([T_ORDREL_REQ])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 5.1], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 5.2])
 AT_KEYWORDS([T_ORDREL_REQ])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 5.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 5.3])
 AT_KEYWORDS([T_ORDREL_REQ])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 5.3], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 5.4])
 AT_KEYWORDS([T_DISCON_REQ])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 5.4], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2484,31 +2490,37 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 12.2.1])
 AT_KEYWORDS([flush T_DISCON_IND TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 12.2.1], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 12.2.2])
 AT_KEYWORDS([flush T_DISCON_IND TS_WIND_ORDREL])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 12.2.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 12.2.3])
 AT_KEYWORDS([flush T_DISCON_IND TS_WREQ_ORDREL])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 12.2.3], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 12.3.1])
 AT_KEYWORDS([flush T_DISCON_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 12.3.1], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 12.3.2])
 AT_KEYWORDS([flush T_DISCON_REQ TS_WIND_ORDREL])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 12.3.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 12.3.3])
 AT_KEYWORDS([flush T_DISCON_REQ TS_WREQ_ORDREL])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 12.3.3], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2564,6 +2576,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 13.2.6.4])
 AT_KEYWORDS([errors T_BIND_REQ TOUTSTATE TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 13.2.6.4], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2644,6 +2657,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 13.4.8.4])
 AT_KEYWORDS([errors T_CONN_REQ TOUTSTATE TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 13.4.8.4], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2719,6 +2733,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 13.5.9.4])
 AT_KEYWORDS([errors T_CONN_RES TOUTSTATE TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 13.5.9.4], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2780,6 +2795,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 13.6.2])
 AT_KEYWORDS([errors T_DATA_REQ EPROTO])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 13.6.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2790,6 +2806,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 13.7.2])
 AT_KEYWORDS([errors T_DISCON_REQ TBADDATA])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 13.7.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2846,6 +2863,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 13.8.2])
 AT_KEYWORDS([errors T_EXDATA_REQ EPROTO])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 13.8.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -2967,6 +2985,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 13.13.2.4])
 AT_KEYWORDS([errors TS_UNBIND_REQ TOUTSTATE TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 13.13.2.4], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3017,6 +3036,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.1.5])
 AT_KEYWORDS([allowedstates T_ADDR_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.1.5], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3057,6 +3077,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.3.5])
 AT_KEYWORDS([allowedstates T_CAPABILITY_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.3.5], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3077,16 +3098,19 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.5.1])
 AT_KEYWORDS([allowedstates T_CONN_RES TS_WRES_CIND])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.5.1], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 14.6.1])
 AT_KEYWORDS([allowedstates T_DATA_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.6.1], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 14.6.2])
 AT_KEYWORDS([allowedstates T_DATA_REQ TS_WREQ_ORDREL])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.6.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3102,6 +3126,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.7.3])
 AT_KEYWORDS([allowedstates T_DISCON_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.7.3], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3149,6 +3174,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.9.5])
 AT_KEYWORDS([allowedstates T_INFO_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.9.5], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3164,11 +3190,13 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.10.1])
 AT_KEYWORDS([allowedstates T_OPTDATA_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.10.1], [], [ignore], [], [], [])
 AT_CLEANUP
 
 AT_SETUP([tcp test 14.10.2])
 AT_KEYWORDS([allowedstates T_OPTDATA_REQ TS_WREQ_ORDREL])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.10.2], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3194,6 +3222,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.11.5])
 AT_KEYWORDS([allowedstates T_OPTMGMT_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.11.5], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3209,6 +3238,7 @@ AT_CLEANUP
 
 AT_SETUP([tcp test 14.12.1])
 AT_KEYWORDS([allowedstates T_ORDREL_REQ TS_DATA_XFER])
+AT_XFAIL_IF([test "`getenforce 2>/dev/null`" = "Enforcing"])
 AT_CHECK([test_inet_tcp 14.12.1], [], [ignore], [], [], [])
 AT_CLEANUP
 
@@ -3230,6 +3260,9 @@ AT_CLEANUP
 dnl ==========================================================================
 dnl
 dnl $Log: testsuite-inet_tcp.at,v $
+dnl Revision 0.9.2.39  2008-08-02 03:02:01  brian
+dnl - expect failures when SELinux is Enforcing
+dnl
 dnl Revision 0.9.2.38  2008-04-28 22:52:18  brian
 dnl - updated headers for release
 dnl
